# hermes-dmhy-anime-subscription

./: README.md  plugin.yaml  pyproject.toml
fixtures/config/: invalid-hardcoded-webhook-url.json  invalid-missing-library-root-apply.json  invalid-missing-qbittorrent-endpoint.json  invalid-unsafe-polling.json  valid.example.json
fixtures/config/var/state/: dmhy-subscription.sqlite3
fixtures/dmhy/: rss-anime.xml  rss-duplicate.xml  rss-missing-enclosure.xml  rss-season-pack.xml
scripts/: release_readiness.py
src/hermes_dmhy_anime_subscription/: __init__.py  bangumi.py  cli.py  config.py  dmhy.py  models.py  monitor.py  organizer.py  plugin.py  qbittorrent.py  rules.py  state.py  telegram.py  webhook.py  workflow.py
tests/: test_bangumi.py  test_config.py  test_dmhy.py  test_models.py  test_monitor.py  test_organizer.py  test_qbittorrent.py  test_release_readiness.py  test_rules.py  test_scaffold.py  test_state.py  test_telegram.py  test_webhook.py  test_workflow.py
